# the-marginal-child

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  calculations.py  constants.py  debug_axes.py  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  test_axes.py  test_axes_behavior.py  test_axes_correct.py  ui_components.py
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: app.py  app_mock.py  app_simple.py  pyproject.toml  requirements.txt  test_app.py  test_integration.py
src/: App.css  App.jsx  App.test.jsx
src/components/: Header.jsx
src/styles/: colors.js
tests/: __init__.py  test_calculations.py  test_health_benefits.py
